--- a/Quiz.html
+++ b/Quiz.html
@@ -282,6 +282,7 @@
     <select id="area" class="dificultad-select">
         <option value="bloque1">Bloque 1️⃣</option>
         <option value="bloque2">Bloque 2️⃣</option>
+        <option value="gafi40">Bloque 2️⃣</option>
         <option value="bloque3">Bloque 3️⃣</option>
         <option value="bloque4">Bloque 4️⃣</option>
         <option value="bloque5">Bloque 5️⃣</option>
