--- a/Quiz.html
+++ b/Quiz.html
@@ -281,8 +281,8 @@
     <label for="area">Selecciona el área:</label>
     <select id="area" class="dificultad-select">
         <option value="bloque1">Bloque 1️⃣</option>
-        <option value="bloque2">Bloque 2️⃣</option>
-        <option value="gafi40">GAFI 40 Recomendaciones 📝</option>
+        <option value="gafi40p">GAFI 40 CONCEPTO</option>
+        <option value="gafi40r">GAFI 40 RECOMENDACIÓN</option>
         <option value="bloque3">Bloque 3️⃣</option>
         <option value="bloque4">Bloque 4️⃣</option>
         <option value="bloque5">Bloque 5️⃣</option>
