--- a/form.html
+++ b/form.html
@@ -4,159 +4,90 @@
   <meta charset="UTF-8" />
   <title>Entrenamiento - Modificación de Usuario</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f0f2f5;
-      margin: 0;
-      padding: 20px;
-    }
-    h2 {
-      color: #003366;
-    }
-    form {
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      max-width: 900px;
-      margin: auto;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin: 10px 0 5px;
-    }
-    input[type="text"],
-    input[type="date"],
-    input[type="number"],
-    select {
-      width: 100%;
-      padding: 8px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    .section {
-      margin-bottom: 20px;
-      padding-bottom: 10px;
-      border-bottom: 1px solid #ccc;
-    }
-    .row {
-      display: flex;
-      gap: 15px;
-    }
-    .col {
-      flex: 1;
-    }
-    .radio-group {
-      display: flex;
-      gap: 20px;
-      margin-top: 5px;
-    }
-    .actions {
-      text-align: right;
-      margin-top: 20px;
-    }
-    button {
-      background: #003366;
-      color: #fff;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #005599;
-    }
+    body { font-family: Arial; background: #f0f2f5; margin: 0; padding: 20px; }
+    form { background: #fff; padding: 20px; border-radius: 8px; max-width: 900px; margin: auto; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+    label { display: block; margin: 10px 0 5px; }
+    input, select { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
+    .row { display: flex; gap: 15px; flex-wrap: wrap; }
+    .col { flex: 1; min-width: 250px; }
+    .actions { text-align: right; margin-top: 20px; }
+    button { background: #003366; color: #fff; padding: 10px 15px; border: none; border-radius: 4px; cursor: pointer; }
+    button:hover { background: #005599; }
   </style>
 </head>
 <body>
   <form id="usuarioForm">
-    <h2>Datos Generales</h2>
-    <div class="section">
-      <div class="row">
-        <div class="col">
-          <label>Id Usuario</label>
-          <input type="text" name="idUsuario" required />
-        </div>
-        <div class="col">
-          <label>RFC</label>
-          <input type="text" name="rfc" />
-        </div>
+    <h2>Datos del Usuario</h2>
+    <div class="row">
+      <div class="col">
+        <label>ID Usuario (Generado)</label>
+        <input type="text" id="idUsuario" readonly />
       </div>
-      <div class="row">
-        <div class="col"><label>Nombre</label><input type="text" name="nombre" required /></div>
-        <div class="col"><label>Apellido Paterno</label><input type="text" name="apellidoP" required /></div>
-        <div class="col"><label>Apellido Materno</label><input type="text" name="apellidoM" required /></div>
+      <div class="col">
+        <label>RFC (Auto-generado)</label>
+        <input type="text" id="rfc" readonly />
       </div>
-      <div class="row">
-        <div class="col">
-          <label>Tipo de Persona</label>
-          <select name="tipoPersona">
-            <option>Persona Física</option>
-            <option>Persona Moral</option>
-          </select>
-        </div>
-        <div class="col">
-          <label>Usuario o Proveedor</label>
-          <select name="rol">
-            <option>Usuario</option>
-            <option>Proveedor</option>
-          </select>
-        </div>
-        <div class="col">
-          <label>Género</label>
-          <div class="radio-group">
-            <label><input type="radio" name="genero" value="Masculino" required /> Masculino</label>
-            <label><input type="radio" name="genero" value="Femenino" required /> Femenino</label>
-          </div>
-        </div>
-      </div>
-      <label>Nacionalidad</label>
-      <select name="nacionalidad">
-        <option value="CUBA">CUBA</option>
-        <option value="MEXICANA">MEXICANA</option>
-        <option value="EXTRANJERA">EXTRANJERA</option>
-      </select>
-      <label>Fecha de Nacimiento</label>
-      <input type="date" name="fechaNacimiento" required />
     </div>
-
-    <h2>Dirección</h2>
-    <div class="section">
-      <div class="row">
-        <div class="col">
-          <label>Calle</label>
-          <input type="text" name="calle" required />
-        </div>
-        <div class="col">
-          <label>No. Ext</label>
-          <input type="text" name="numExt" />
-        </div>
-        <div class="col">
-          <label>MZA</label>
-          <input type="text" name="mza" />
-        </div>
-      </div>
-      <label>Colonia</label>
-      <input type="text" name="colonia" />
-      <label>Ciudad / Municipio</label>
-      <input type="text" name="municipio" />
-      <label>Estado</label>
-      <input type="text" name="estado" />
-      <label>País</label>
-      <input type="text" name="pais" value="MÉXICO" />
-      <label>Código Postal</label>
-      <input type="text" name="cp" />
+    <div class="row">
+      <div class="col"><label>Nombre</label><input type="text" id="nombre" required /></div>
+      <div class="col"><label>Apellido Paterno</label><input type="text" id="apellidoP" required /></div>
+      <div class="col"><label>Apellido Materno</label><input type="text" id="apellidoM" required /></div>
     </div>
-
+    <div class="row">
+      <div class="col">
+        <label>Fecha de Nacimiento</label>
+        <input type="date" id="fechaNacimiento" required />
+      </div>
+      <div class="col">
+        <label>Tipo de Documento</label>
+        <select id="tipoDoc" required>
+          <option value="">Selecciona</option>
+          <option value="Residencia">Residencia</option>
+          <option value="INE">INE</option>
+          <option value="Pasaporte">Pasaporte</option>
+        </select>
+      </div>
+      <div class="col">
+        <label>Número de Documento</label>
+        <input type="text" id="numeroDoc" required />
+      </div>
+      <div class="col">
+        <label>Fecha de Vencimiento</label>
+        <input type="date" id="vencimientoDoc" required />
+      </div>
+    </div>
     <div class="actions">
       <button type="submit">Aceptar</button>
     </div>
   </form>
 
   <script>
+    // Generar ID aleatorio
+    document.getElementById('idUsuario').value = Math.floor(100000 + Math.random() * 900000);
+
+    // Generar RFC básico al cambiar nombre o fecha
+    function generarRFC() {
+      const nombre = document.getElementById('nombre').value.trim().toUpperCase();
+      const apP = document.getElementById('apellidoP').value.trim().toUpperCase();
+      const apM = document.getElementById('apellidoM').value.trim().toUpperCase();
+      const fecha = document.getElementById('fechaNacimiento').value;
+
+      if (nombre && apP && apM && fecha) {
+        const [year, month, day] = fecha.split("-");
+        const rfc = apP[0] + (apP[1] || '') + apM[0] + nombre[0] + year.slice(2) + month + day;
+        document.getElementById('rfc').value = rfc;
+      }
+    }
+
+    document.getElementById('nombre').addEventListener('input', generarRFC);
+    document.getElementById('apellidoP').addEventListener('input', generarRFC);
+    document.getElementById('apellidoM').addEventListener('input', generarRFC);
+    document.getElementById('fechaNacimiento').addEventListener('change', generarRFC);
+
+    // Validar y mostrar mensaje
     document.getElementById("usuarioForm").addEventListener("submit", function (e) {
       e.preventDefault();
-      alert("Formulario llenado correctamente para entrenamiento.");
+      alert("Formulario de entrenamiento llenado correctamente.");
     });
   </script>
 </body>
