--- a/form.html
+++ b/form.html
@@ -1,148 +1,178 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Entrenamiento - Modificación de Usuario</title>
+  <meta charset="UTF-8">
+  <title>Formulario de Entrenamiento</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f0f2f5; margin: 0; padding: 20px; }
-    form { background: #fff; padding: 20px; border-radius: 8px; max-width: 1000px; margin: auto; box-shadow: 0 0 10px rgba(0,0,0,0.1); position: relative; }
-    label { display: block; margin: 10px 0 5px; }
-    input, select { width: 100%; padding: 8px; border-radius: 4px; border: 1px solid #ccc; }
-    .row { display: flex; gap: 15px; flex-wrap: wrap; }
-    .col { flex: 1; min-width: 250px; }
-    .actions { text-align: right; margin-top: 20px; }
-    button { background: #003366; color: #fff; padding: 10px 15px; border: none; border-radius: 4px; cursor: pointer; }
-    button:hover { background: #005599; }
-    h2 { margin-top: 30px; color: #003366; }
-    #timer { position: absolute; top: 10px; right: 20px; font-weight: bold; background: #e0e0e0; padding: 5px 10px; border-radius: 5px; }
-    #snapshot { margin-top: 20px; text-align: center; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f3f3f3;
+      margin: 0;
+      padding: 0;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    form {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+    }
+
+    label {
+      font-weight: bold;
+    }
+
+    input, select {
+      padding: 8px;
+      width: 100%;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    .full-width {
+      grid-column: span 2;
+    }
+
+    button {
+      grid-column: span 2;
+      padding: 10px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    button:hover {
+      background: #0056b3;
+    }
+
+    .success {
+      grid-column: span 2;
+      text-align: center;
+      color: green;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
-  <form id="usuarioForm">
-    <div id="timer">Tiempo: 00:00</div>
 
-    <h2>Datos Generales</h2>
-    <div class="row">
-      <div class="col"><label>ID Usuario (Generado)</label><input type="text" id="idUsuario" readonly /></div>
-      <div class="col"><label>RFC (Auto-generado)</label><input type="text" id="rfc" readonly /></div>
-    </div>
-    <div class="row">
-      <div class="col"><label>Nombre</label><input type="text" id="nombre" required /></div>
-      <div class="col"><label>Apellido Paterno</label><input type="text" id="apellidoP" required /></div>
-      <div class="col"><label>Apellido Materno</label><input type="text" id="apellidoM" required /></div>
-    </div>
-    <div class="row">
-      <div class="col"><label>Fecha de Nacimiento</label><input type="date" id="fechaNacimiento" required /></div>
-      <div class="col"><label>Tipo de Persona</label>
-        <select required><option>Persona Física</option><option>Persona Moral</option></select>
-      </div>
-      <div class="col"><label>Género</label>
-        <select required><option>Masculino</option><option>Femenino</option></select>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col"><label>Nacionalidad</label>
-        <select required><option value="MEXICANA">MEXICANA</option><option value="CUBA">CUBA</option><option value="EXTRANJERA">EXTRANJERA</option></select>
-      </div>
-      <div class="col"><label>Residencia</label>
-        <select required><option>Residente permanente</option><option>Residente temporal</option></select>
-      </div>
-    </div>
+<div class="container">
+  <h2>Formulario de Entrenamiento</h2>
+  <form id="formulario">
+    <label>Nombre de usuario:</label>
+    <input type="text" name="nombre" required>
 
-    <h2>Documento de Identificación</h2>
-    <div class="row">
-      <div class="col"><label>Tipo de Documento</label>
-        <select id="tipoDoc" required>
-          <option value="">Selecciona</option>
-          <option value="Residencia">Residencia</option>
-          <option value="INE">INE</option>
-          <option value="Pasaporte">Pasaporte</option>
-        </select>
-      </div>
-      <div class="col"><label>Número de Documento</label><input type="text" id="numeroDoc" required /></div>
-      <div class="col"><label>Fecha de Vencimiento</label><input type="date" id="vencimientoDoc" required /></div>
-    </div>
+    <label>Apellido paterno:</label>
+    <input type="text" name="paterno" required>
 
-    <h2>Dirección</h2>
-    <div class="row">
-      <div class="col"><label>Calle</label><input type="text" required /></div>
-      <div class="col"><label>No. Exterior</label><input type="text" required /></div>
-      <div class="col"><label>No. Interior</label><input type="text" /></div>
-      <div class="col"><label>Manzana (MZA)</label><input type="text" /></div>
-    </div>
-    <div class="row">
-      <div class="col"><label>Colonia</label><input type="text" required /></div>
-      <div class="col"><label>Ciudad o Población</label><input type="text" required /></div>
-      <div class="col"><label>Alcaldía o Municipio</label><input type="text" required /></div>
-    </div>
-    <div class="row">
-      <div class="col"><label>Estado</label><input type="text" required /></div>
-      <div class="col"><label>País</label><input type="text" value="MÉXICO" required /></div>
-      <div class="col"><label>Código Postal</label><input type="text" required /></div>
-    </div>
+    <label>Apellido materno:</label>
+    <input type="text" name="materno">
 
-    <div class="actions">
-      <button type="submit">Aceptar</button>
-    </div>
+    <label>Tipo de ID oficial:</label>
+    <select name="tipoID" required>
+      <option value="">Seleccione</option>
+      <option>INE</option>
+      <option>Licencia de Conducir</option>
+      <option>Pasaporte</option>
+      <option>Residencia</option>
+    </select>
+
+    <label>Número de identificación:</label>
+    <input type="text" name="numeroID" required>
+
+    <label>Fecha de nacimiento:</label>
+    <input type="date" name="fechaNacimiento" required>
+
+    <label>Nacionalidad:</label>
+    <select name="nacionalidad" required>
+      <option value="">Seleccione</option>
+      <option>Mexicana</option>
+      <option>Estadounidense</option>
+      <option>Canadiense</option>
+      <option>Guatemalteca</option>
+      <option>Colombiana</option>
+    </select>
+
+    <label>Vigencia de la identificación oficial:</label>
+    <input type="date" name="vigenciaID" required>
+
+    <label>País de nacimiento:</label>
+    <input type="text" name="paisNacimiento" required>
+
+    <label>Calle, avenida o vía:</label>
+    <input type="text" name="calle" required>
+
+    <label>Número exterior:</label>
+    <input type="text" name="numExt" required>
+
+    <label>Número interior:</label>
+    <input type="text" name="numInt">
+
+    <label>Código postal:</label>
+    <input type="text" name="cp" required>
+
+    <label>Colonia:</label>
+    <input type="text" name="colonia" required>
+
+    <label>Ciudad o población:</label>
+    <input type="text" name="ciudad" required>
+
+    <label>Alcaldía o municipio:</label>
+    <input type="text" name="municipio" required>
+
+    <label>País:</label>
+    <input type="text" name="pais" required>
+
+    <label>Estado:</label>
+    <select name="estado" required>
+      <option value="">Seleccione</option>
+      <option>Ciudad de México</option>
+      <option>Estado de México</option>
+      <option>Jalisco</option>
+      <option>Nuevo León</option>
+      <option>Veracruz</option>
+      <option>Yucatán</option>
+      <option>Chiapas</option>
+      <!-- Puedes agregar más -->
+    </select>
+
+    <label>Localidad:</label>
+    <input type="text" name="localidad">
+
+    <button type="submit">Enviar</button>
+    <div id="mensaje" class="success" style="display: none;">¡Formulario enviado correctamente!</div>
   </form>
+</div>
 
-  <div id="snapshot"></div>
+<script>
+  const formulario = document.getElementById('formulario');
+  const mensaje = document.getElementById('mensaje');
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-  <script>
-    // Iniciar cronómetro
-    let start = Date.now();
-    let timerInterval = setInterval(() => {
-      let elapsed = Date.now() - start;
-      let mins = Math.floor(elapsed / 60000).toString().padStart(2, '0');
-      let secs = Math.floor((elapsed % 60000) / 1000).toString().padStart(2, '0');
-      document.getElementById('timer').textContent = `Tiempo: ${mins}:${secs}`;
-    }, 1000);
+  formulario.addEventListener('submit', function(e) {
+    e.preventDefault();
+    mensaje.style.display = 'block';
+    setTimeout(() => {
+      mensaje.style.display = 'none';
+      formulario.reset();
+    }, 3000);
+  });
+</script>
 
-    // ID aleatorio
-    document.getElementById('idUsuario').value = Math.floor(100000 + Math.random() * 900000);
-
-    // RFC dinámico
-    function generarRFC() {
-      const nombre = document.getElementById('nombre').value.trim().toUpperCase();
-      const apP = document.getElementById('apellidoP').value.trim().toUpperCase();
-      const apM = document.getElementById('apellidoM').value.trim().toUpperCase();
-      const fecha = document.getElementById('fechaNacimiento').value;
-
-      if (nombre && apP && apM && fecha) {
-        const [year, month, day] = fecha.split("-");
-        const rfc = apP[0] + (apP[1] || 'X') + apM[0] + nombre[0] + year.slice(2) + month + day;
-        document.getElementById('rfc').value = rfc;
-      }
-    }
-
-    document.getElementById('nombre').addEventListener('input', generarRFC);
-    document.getElementById('apellidoP').addEventListener('input', generarRFC);
-    document.getElementById('apellidoM').addEventListener('input', generarRFC);
-    document.getElementById('fechaNacimiento').addEventListener('change', generarRFC);
-
-    // Al enviar
-    document.getElementById("usuarioForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-
-      const nombreAspirante = prompt("Ingresa tu nombre completo como aspirante:");
-      if (!nombreAspirante) {
-        alert("Debes ingresar tu nombre para guardar la evidencia.");
-        return;
-      }
-
-      clearInterval(timerInterval);
-      html2canvas(document.querySelector("#usuarioForm")).then(canvas => {
-        const imgData = canvas.toDataURL("image/png");
-
-        const div = document.getElementById("snapshot");
-        div.innerHTML = `<h2>Evidencia Capturada</h2>
-                         <p><strong>Aspirante:</strong> ${nombreAspirante}</p>
-                         <p><strong>Tiempo:</strong> ${document.getElementById("timer").textContent}</p>
-                         <img src="${imgData}" alt="Evidencia" style="max-width:100%;border:1px solid #ccc;" />`;
-      });
-    });
-  </script>
 </body>
 </html>
