--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Formulario de Entrenamiento</title>
+  <title>Formulario de Entrenamiento con Evaluación</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
@@ -73,11 +73,16 @@
       font-size: 16px;
       padding: 0 10px;
     }
+    #resultado {
+      text-align: center;
+      font-size: 20px;
+      color: green;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
 
-<!-- Pantalla de login -->
 <div id="login">
   <h3>Ingrese la contraseña para acceder</h3>
   <input type="password" id="password" placeholder="Contraseña">
@@ -86,11 +91,9 @@
   <p id="error" style="color:red; display:none;">Contraseña incorrecta</p>
 </div>
 
-<!-- Formulario -->
 <div class="container" id="formulario" style="display:none;">
   <h2>Formulario de Entrenamiento</h2>
   <div class="timer" id="timer-container">Tiempo transcurrido: <span id="cronometro">00:00:00</span></div>
-
   <form id="form">
     <fieldset>
       <legend>Datos personales</legend>
@@ -146,8 +149,10 @@
       <label>Localidad:</label><input name="localidad">
     </fieldset>
 
-    <button class="btn" type="submit">Generar PDF</button>
+    <button class="btn" type="submit">Evaluar y Generar PDF</button>
   </form>
+
+  <div id="resultado"></div>
 </div>
 
 <script>
@@ -181,6 +186,15 @@
     return n < 10 ? '0' + n : n;
   }
 
+  // RESPUESTAS CORRECTAS Y PUNTAJE
+  const respuestasCorrectas = {
+    nombre: "Juan",
+    paterno: "Pérez",
+    nacionalidad: "Mexicana",
+    tipoID: "INE"
+  };
+  const puntajePorCampo = 10;
+
   document.getElementById('form').addEventListener('submit', function(e) {
     e.preventDefault();
     clearInterval(intervalo);
@@ -194,6 +208,17 @@
     let nombrePDF = prompt("Ingrese el nombre del aspirante para el archivo PDF:");
     if (!nombrePDF) nombrePDF = "aspirante";
 
+    // Evaluación
+    let puntaje = 0;
+    for (const campo in respuestasCorrectas) {
+      if ((formData.get(campo) || "").trim().toLowerCase() === respuestasCorrectas[campo].trim().toLowerCase()) {
+        puntaje += puntajePorCampo;
+      }
+    }
+
+    document.getElementById('resultado').textContent = `Puntaje obtenido: ${puntaje}`;
+
+    // Generar PDF
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
     let y = 20;
@@ -202,7 +227,9 @@
     doc.text("Formulario de Entrenamiento", 20, y);
     y += 10;
     doc.setFontSize(12);
-    doc.text(`Fecha: ${fechaStr}   Hora: ${horaStr}   Tiempo total: ${tiempo}`, 20, y);
+    doc.text(`Fecha: ${fechaStr}   Hora: ${horaStr}   Tiempo: ${tiempo}`, 20, y);
+    y += 10;
+    doc.text(`Puntaje obtenido: ${puntaje}`, 20, y);
     y += 10;
 
     doc.setLineWidth(0.5);
